# Lavoisian

./: .gitignore  CMakeLists.txt  README.md  index.html
assets/: chemilator.db
impl/: eqnBalance.cpp  scratch.cpp
include/chm/: Core.h  Equation.h  Error.h  Math.h  Molecule.h  utils.h
include/emscripten/: version.h
pages/: eqnBalance.html
src/: Core.cpp  Equation.cpp  Math.cpp  Molecule.cpp  utils.cpp
test/: main.cpp  main_test.cpp
